# hermes-advisor-gate

./: AGENTS.md  README.md  mise.toml  pyproject.toml
docs/: architecture.md  end-to-end-validation-runbook.md  exec-plan.md  hermes-baseline-topology.md  image-spec-compliance.md  image-spec-remediation-plan.md  implementation-plan.md  integration-validation.md  operations.md
plugin/advisor-gate/advisor_gate/: audit_handlers.py  packets.py  prompts.py  schemas.py  store.py  tool_schemas.py
runtime-profile/runbooks/: install-pi.md  live-smoke.md  rollback.md
runtime-profile/scripts/: live-smoke-driver.sh
runtime-profile/skills/advisor-flow/: SKILL.md
runtime-profile/skills/commander/: SKILL.md
runtime-profile/skills/worker/: SKILL.md
skills/advisor-gate/: SKILL.md
tests/: test_plugin_tool.py  test_prompt_packets.py  test_receipts.py  test_schema.py
