[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-runtime"
version = "0.1.0"
description = "Personal Hermes runtime profile with Advisor Gate plugin and validation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "ty>=0.0.56",
]

[project.entry-points."hermes_agent.plugins"]
advisor-gate = "advisor_gate.registration"

[tool.setuptools]
package-dir = {"" = "plugin/advisor-gate"}

[tool.setuptools.packages.find]
where = ["plugin/advisor-gate"]
include = ["advisor_gate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["plugin/advisor-gate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
